# project-mosquitto-in-fastapi

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  mosquitto.conf  payload.json  pyproject.toml
app/: config.py  main.py  mqtt_client.py  pubsub_service.py
app/db/: memory_db.py
app/models/: pos_models.py  schemas.py
app/mqtt/: client.py
mosquitto/: mosquitto.conf
tests/: test_mqtt.py  test_pos_mqtt.py  test_pos_mqtt_perf.py
