[project]
name = "project-mosquitto-in-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Millen"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)"
]


[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
